--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
   "bin": {
     "express-create-app": "./bin/cli.js"
   },
-  "keywords": ["express", "create", "app"],
+  "keywords": [
+    "express",
+    "create",
+    "app"
+  ],
   "dependencies": {},
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "create" : "node ./bin/cli.js api",
+    "remove": "rm -rf api"
   },
   "repository": {
     "type": "git",
